--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot
-spring.datasource.url = jdbc.postgresql://postgres:07012005@localhost:5432/products-api
-spring.data.username = postgres
-spring.data.password=07012005
+spring.datasource.url = jdbc:postgresql://localhost:5432/products-api
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jba.properties.hibernate.jdbc.lob.no_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.lob.no_contextual_creation=true
